# WeMeet

./: CMakeLists.txt  LICENSE  README.md  main.cpp
assets/: img.qrc  style.css
assets/qss/: style.qss
src/: audioplayer.cpp  audioplayer.h  av_control.cpp  av_control.h  av_decoder_muxer.cpp  av_decoder_muxer.h  avmessagemuxer.cpp  avmessagemuxer.h  cameraVideo.cpp  cameraVideo.h  config.cpp  config.h  config.txt  mediacodec.cpp  mediacodec.h  portaudiox.cpp  portaudiox.h  tcpclient.cpp  tcpclient.h
src/codec/: packet.cpp  packet.h  protobufCodec.cpp  protobufCodec.h  protobuf_fwd.h
src/protoc/: message.pb.cc  message.pb.h  message.proto
src/test/: test_AudioPlayer.cpp  test_PortAudioX.cpp  test_mediacodec_audio.cpp
ui/: chatwindow.cpp  chatwindow.h  chatwindow.ui  logindialog.cpp  logindialog.h  logindialog.ui
ui/chatmessage/: filemessage.cpp  filemessage.h  filemessage.ui  messagecommon.h  qnchatmessage.cpp  qnchatmessage.h  textmessage.cpp  textmessage.h  textmessage.ui  timemessage.cpp  timemessage.h  timemessage.ui
